# centaur-harness

./: .gitignore  AGENTS.md  CENTAUR_WP0_1_STARTER_PROMPTS.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  README.md  attestation_reviewers.yaml  pyproject.toml  requirements-dev.txt
.claude/: settings.json
checks/: README.md  safety_patterns.yaml
core/: agent_logistics.py  atomic.py  canon.py  command_extractor.py  context_compiler.py  engine_projection.py  live_client.py  prompt_templates.py  resolver.py  response_redact.py  rng.py  salvo_resolver.py  salvo_resolver_het.py  spend_guard.py  turn_record.py
docs/: COMMAND_SAFETY.md  CONSTITUTION.md  ENGINE_CONTRACT.md  PROGRESS.md  RUNBOOK.md  SAFETY_AND_SCOPE.md
factbase/: assumptions.yaml  claims.yaml  events.yaml  sources.yaml
schemas/: agent.schema.md  assumptions.schema.md  calibration.schema.md  calibration_feasibility.schema.md  claim.schema.md  engine_command.schema.md  engine_state.schema.md  event.schema.md  knowledge_book.schema.md  llm_step.schema.md  review.schema.md  ruleset.schema.md  run_ledger.schema.md  scenario.schema.md  signoff.schema.md  source.schema.md  state.schema.md  transition_event.schema.md  turn.schema.md  turn_record.schema.md
scripts/: agent_live_campaign.py  agent_live_capture.py  agent_offline_campaign.py  agent_offline_run.py  campaign_run.py  campaign_sensitivity.py  engine_recompute.py  engine_run.py  safety_check.py  salvo_het_run.py  salvo_run.py  secret_scan.py  validate_agent_fog.py  validate_agent_provenance.py  validate_agents.py  validate_claims.py  (+14 more)
(+307 files in other folders)
